--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,8 @@
         </div>
 
         {{>footer}}
+
+        <p>This site was created by Mateus M. It uses data from mapbox.com and Weatherstack API.</p>
     </body>
 
 </html>
